--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,125 @@
 html {
   height: 100%;
 }
+
 body {
   height: 100%;
+  background-color: #e7dfc6;
 }
+
 #root {
-  display: flex;
   height: 100%;
-  flex-direction: column;
-  justify-content: center;
 }
-#page-content {
-  flex-grow: 2;
+
+#blogcontainer {
+  width: fit-content;
+  height: fit-content;
+}
+
+.salsa-regular {
+  font-family: "Salsa", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
+
+h1,
+h4,
+p,
+h2,
+h6,
+h5 {
+
+  font-family: "Bebas Neue", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+#aboutpic {
+  width: 950px;
+}
+
+/* 
+#navcolor{
+  background-color: #e9f1f7;
+} */
+
+
+#projects {
+  font-size: 175px;
+  float: right;
+  padding-left: 750px;
+  color: black;
+
+}
+
+.bebas-neue-regular {
+  font-family: "Bebas Neue", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+#projects {
+  box-shadow: inset 0 0 0 0 black;
+  color: black;
+  margin: 0 -.25rem;
+  padding: 0 .25rem;
+  transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
+
+}
+
+#projects:hover {
+  box-shadow: inset 100px 0 0 0 black;
+  color: white;
+}
+
+#h6left {
+  padding-left: 1100px;
+}
+
+#h6font {
+  font-size: 50px;
+
+}
+
+#Blogs {
+  background-color: #e7dfc6;
+}
+
+#linkdinpic {
+  width: 20px;
+  height: 20px;
+}
+
+#facebook,
+#email,
+#linkdin {
+  width: 65px;
+  height: 65px;
+  margin-bottom: 25px;
+
+
+}
+
+#projectsH1 {
+  font-size: 175px;
+}
+
+#card1 {
+  max-width: fit-content;
+  max-height: fit-content;
+}
+
+#imagesP:hover {
+  opacity: 1;
+}
+
+#imagesP {
+  width: 250px;
+  height: 400px;
+  object-fit: cover; /* Ensures the image covers the area while maintaining aspect ratio */
+  padding: 10px;
+  border: 1px solid black; /* Add border if needed */
+  border-radius: 15px; /* Adjust the value for desired roundness */
+  opacity: 0.6;
+  transition: 0.3s;
 }
