--- a/src/App.css
+++ b/src/App.css
@@ -215,3 +215,22 @@ h1, h4, p, h2, h6, h5 {
 .projects-page #projects {
   font-size: 3rem;
 }
+
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #e7dfc6;
+  text-align: center;
+  padding: 10px 0;
+  border-top: 1px solid #e7e7e7;
+}
+
+.container {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
