--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 /* Ensure the full height of the viewport is used */
 html, body, #root {
-  height: 100%;
+  height: auto;
   margin: 0;
   padding: 0;
   background-color: #e7dfc6;
@@ -27,10 +27,11 @@ h1, h4, p, h2, h6, h5 {
 
 /* Projects link styles */
 #projects {
-  font-size: 175px;
+  font-size: 50px;
   float: right;
   padding-left: 750px;
   color: black;
+  margin-top: 50px;
 }
 
 .bebas-neue-regular {
@@ -197,9 +198,10 @@ h1, h4, p, h2, h6, h5 {
   }
 
   /* Adjust text size and spacing on homepage for mobile */
-  h1, h2, h4, h5, h6, p {
-    font-size: 1px; /* Adjusted font size for mobile */
+ #projects, #projectsH1 {
+    font-size: 50px; /* Adjusted font size for mobile */
     margin-bottom: 10px;
+    margin: 30px;
   }
 }
 
@@ -208,6 +210,8 @@ h1, h4, p, h2, h6, h5 {
   h1, h2, h4, h5, h6, p {
     font-size: 1.5rem;
     margin-bottom: 15px;
+    margin-top: 15px;
+    padding: 50px;
   }
 }
 
